# pdmenu

./: .gdb_history  BUGS  INSTALL  Makefile  Makefile.in  README  TODO  aclocal.m4  colors.h  config.h  configure  configure.ac  configure.in  global.h  inputbox.c  inputbox.h  keyboard.c  keyboard.h  limits.h  menu.c  menu.h  menutype.h  mouse.c  mouse.h  pdmenu-0.6.1.lsm  pdmenu-0.6.2.lsm  pdmenu-0.6.3.lsm  pdmenu.c  pdmenu.h  pdmenu.lsm.in  pdmenu.man.in  pdmenurc.in  rc.c  rc.h  rc_config.h  screen.c  screen.h  slang.h  slang.h.in  strings.h
autoconf/: Makefile.in  makeinfo.in  mkinstalldirs  pdmenurc.monitor.in
contrib/: setenv.c
debian/: README.debian  changelog  compress  conffiles  config  control  copyright  cpp.pl  dirs  docs  examples  fixlinks  install  menu  menu-method  menu-method-vc  menu-method-x11  menufile  pdmenu-genmenu  pdmenu-genmenu.8  pdmenu-genmenu.conf  pdmenu-method  pdmenurc  pdmenurc.debian  postinst  postrm  rules  substvars
doc/: .cvsignore  ANNOUNCE  BUGS  pdmenu-0.6.4.lsm  pdmenu-1.0.0.lsm  pdmenu-1.0.1.lsm  pdmenu-1.0.2.lsm  pdmenu-1.1.1.lsm  pdmenu-1.1.2.lsm  pdmenu-1.1.3.lsm  pdmenu-1.1.4.lsm  pdmenu-1.1.5.lsm  pdmenu-1.1.6.lsm  pdmenu-1.1.7.lsm  pdmenu-1.1.8.lsm  pdmenu-1.2.0.lsm  pdmenu-1.2.1.lsm  pdmenu-1.2.10.lsm  pdmenu-1.2.11.lsm  pdmenu-1.2.12.lsm  pdmenu-1.2.13.lsm  pdmenu-1.2.14.lsm  pdmenu-1.2.15.lsm  pdmenu-1.2.16.lsm  pdmenu-1.2.17.lsm  pdmenu-1.2.18.lsm  pdmenu-1.2.19.lsm  pdmenu-1.2.2.lsm  pdmenu-1.2.20.lsm  pdmenu-1.2.21.lsm  pdmenu-1.2.22.lsm  pdmenu-1.2.23.lsm  pdmenu-1.2.24.lsm  pdmenu-1.2.25.lsm  pdmenu-1.2.26.lsm  pdmenu-1.2.27.lsm  pdmenu-1.2.28.lsm  pdmenu-1.2.29.lsm  pdmenu-1.2.3.lsm  pdmenu-1.2.30.lsm  (+24 more)
examples/: README  ba.lpd  pdmenurc.complex.in  pdmenurc.in  showdir.pl
examples/newbie/: pdmenurc.newbie.in
po/: POTFILES.in  da.po  es.po  fr.po  pdmenu.pot  ru.po
redhat/: pdmenu.spec  pdmenu.spec.in
src/: actions.c  actions.h  colors.h  config.h  error.c  error.h  getline.c  getline.h  global.h  inputbox.c  inputbox.h  inputbox.h;  keyboard.c  keyboard.h  limits.h  menu.c  menu.h  menutype.h  mouse.c  mouse.h  pdgetline.c  pdgetline.h  pdmenu.c  pdmenu.h  pdstring.c  pdstring.h  rc.c  rc.h  rc_config.h  screen.c  screen.h  slang.h.in  strings.h  window.c  window.h  windowtype.h
